fixed the media query, very different on mobile compared to computermobile size

--- a/style.css
+++ b/style.css
@@ -210,29 +210,18 @@ p.contact-intro {
 
 @media only screen and (max-width: 767px) {
 	.portfolio-piece {
-		width: 40%;
-		background-color: #60046e;
-		margin-top: 30px;
-		margin-bottom: 5px;
-		border: 5px solid black;
-		padding-left: 20px;
-		padding-right: 20px;
-		display: flex;
-		flex-wrap: wrap;
-		flex-direction: row;
-		align-content: center;
-		justify-content: center;
-		align-items: center;
-		text-align: center;
-		border-radius: 80px;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 1.5rem;
+		font-size: 26px;
 	}
 	.about-contents {
 		font-size: 1.5rem;
 	}
-	.intro {
-		margin-top: 20%;
-		font-size: 2rem;
+	.about-image {
+		width: 80%;
 	}
 }
+/*	}*/
+/*	.intro {*/
+/*		margin-top: 20%;*/
+/*		font-size: 2rem;*/
+/*	}*/
+/*}*/
